[package]
name = "mgba_log"
version = "0.2.1"
authors = ["Anders Evensen"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/mgba_log"
description = "A logging implementation for mGBA."
categories = ["development-tools::debugging", "game-development", "no-std", "no-std::no-alloc"]
keywords = ["log", "logging", "logger", "gba", "mgba"]

[dependencies]
log = "0.4.19"

[dev-dependencies]
cargo_metadata = "0.15.4"
mgba_log_reporter = {path = "tests/mgba_log_reporter"}
serde_json = "1.0.96"
